--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="site-header">
 
-  <h1 class="site-title">
-    <a href="{{ site.baseurl }}/" title="Home page">Aditya Pakki</a>
-  </h1>
+  <h3 class="site-title">
+    <a href="{{ site.baseurl }}/" title="Home page">Aditya</a>
+  </h3>
 
   <nav class="site-nav">
     {% for link in site.navigation %}
