--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -154,9 +154,11 @@
 // SITE FOOTER - RESPONSIVE ------------------
 @include mq-up(sm) {
   .site-contact {
-    float: right;
+    float: left;
     width: 50%;
-    text-align: right;
+    text-align: left;
+    margin:0;
+    padding:0;
   }
 
   .site-source {
