final commit for the day

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header class="site-header">
 
-  <h2 class="site-title">
+  <p class="site-title">
     <a href="{{ site.baseurl }}/" title="Home page">Home</a>
-  </h2>
+  </p>
 
   <nav class="site-nav">
     {% for link in site.navigation %}
