--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -32,7 +32,7 @@
 }
 
 .site-title {
-  text-align: center;
+  text-align: left;
 }
 
 .site-nav a {
@@ -67,7 +67,7 @@
   }
 
   .site-title {
-    margin-bottom: $spacer1;
+    margin-bottom: $spacer0;
   }
 
   .site-nav a {
