change the home logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header class="site-header">
 
   <p class="site-title">
-    <a href="{{ site.baseurl }}/" title="Home page">Home</a>
+<!--    <a href="{{ site.baseurl }}/" title="Home page">Home</a>
+-->
   </p>
 
   <nav class="site-nav">
