--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -167,7 +167,7 @@ p.post-desc {
 }
 
 .site-profile {
-  float: left;
+  float: right;
   width: 96px;
   height: 96px;
   margin: -.4rem 1rem 0 $spacer;
