--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -144,6 +144,7 @@
 .site-contact li,
 .site-source li {
 
+  display: inline-block;
   &:not(:last-child)::after {
     content: '|';
     color: $brand-light-color;
