--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
 <header class="site-header">
 
   <p class="site-title">
-<!--    <a href="{{ site.baseurl }}/" title="Home page">Home</a>
--->
+  <h1 class="site-title">
+      <a href="{{ site.baseurl }}/" title="Home page"><img class="site-logo" src="{{ site.baseurl }}/assets/img/favicon.ico"></a>
+  </h1>
   </p>
 
   <nav class="site-nav">
