--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,4 +23,7 @@
   <!-- CSS files -->
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
 
+  {% include head.html %}
+  {% seo %}
+
 </head>
