--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -20,8 +20,13 @@
 }
 
 .site-logo {
-  width: 2rem;
-  height: 2rem;
+  width: 1rem;
+  height: 1rem;
+}
+
+.site-profile {
+  width: 6rem;
+  height: 6rem;
 }
 
 .site-nav {
