Change the image sizes

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -127,6 +127,11 @@ p.post-desc {
   transform: scaleX(3);
 }
 
+.pdf-image {
+  width: 36px;
+  height: 36px;
+}
+
 // PAGE WORK & PROJECTS ====================================
 
 .project {
@@ -169,14 +174,14 @@ p.post-desc {
 .site-profile {
   float: right;
   width: 96px;
-  height: 96px;
+  height: 144px;
   margin: -.4rem 1rem 0 $spacer;
 }
 
 @include mq-up(md) {
   .site-profile {
     width: 144px;
-    height: 144px;
+    height: 180px;
     margin: -1.2rem 1rem 0 2rem;
   }
 }
