--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -173,8 +173,8 @@ p.post-desc {
 
 .site-profile {
   float: right;
-  max-width: 100%;
-  max-height:100%;
+  width: 72px;
+  height: 72px;
   margin: -.4rem 1rem 0 $spacer;
 }
 
